adds some acros

--- a/2018-westphal-antpc.tex
+++ b/2018-westphal-antpc.tex
@@ -180,7 +180,8 @@ waste streams are metallic waste, ceramic waste from electrowinning and electror
 waste contains the majority of TRUs, Sr, and rare-earth elements. The elemental separation efficiencies are 
 determined through theoretical material balance determined by the NEA and Hermann et al \cite{flowsheet_1998,herrmann_separation_2010}. 
 The simple simulation using a separations facility was run to verify the table of efficiencies input to \Cyclus. A scenario was 
-created of one separations facility with a feed of five year cooled spent LWR fuel at a burn-up of 45GWd/MTIHM to 
+created of one separations facility with a feed of five year cooled spent LWR 
+fuel at a burn-up of 45 \gls{GWd} per \gls{MTIHM} to 
 match results seen in \cite{flowsheet_1998}.
 
 A pyroprocessing facility can be modeled with the separations archetype at low fidelity 
