--- a/acros.tex
+++ b/acros.tex
@@ -1,4 +1,6 @@
+%\newacronym{<++>}{<++>}{<++>}
 \newacronym[longplural={metric tons of heavy metal}]{MTHM}{MTHM}{metric ton of heavy metal}
+\newacronym[longplural={metric tons of initial heavy metal}]{MTIHM}{MTIHM}{metric ton of initial heavy metal}
 \newacronym{ABM}{ABM}{agent-based modeling}
 \newacronym{ACDIS}{ACDIS}{Program in Arms Control \& Domestic and International Security}
 \newacronym{AHTR}{AHTR}{Advanced High Temperature Reactor}
@@ -46,6 +48,7 @@
 \newacronym{EP}{EP}{Engineering Physics}
 \newacronym{FCO}{FCO}{Fuel Cycle Options}
 \newacronym{FCT}{FCT}{Fuel Cycle Technology}
+\newacronym{FCWMD}{FCWMD}{Fuel Cycle and Waste Management Division}
 \newacronym{FEHM}{FEHM}{Finite Element Heat and Mass Transfer}
 \newacronym{FEPs}{FEPs}{Features, Events, and Processes}
 \newacronym{FHR}{FHR}{Fluoride-Salt-Cooled High-Temperature Reactor}
@@ -59,6 +62,7 @@
 \newacronym{GPAM}{GPAM}{Generic Performance Assessment Model}
 \newacronym{GRSAC}{GRSAC}{Graphite Reactor Severe Accident Code}
 \newacronym{GUI}{GUI}{graphical user interface}
+\newacronym{GWd}{GWd}{Gigawatt Days}
 \newacronym{HLW}{HLW}{high level waste}
 \newacronym{HPC}{HPC}{high-performance computing}
 \newacronym{HTC}{HTC}{high-throughput computing}
@@ -71,6 +75,7 @@
 \newacronym{ISFSI}{ISFSI}{Independent Spent Fuel Storage Installation}
 \newacronym{ISRG}{ISRG}{Independent Student Research Group}
 \newacronym{JFNK}{JFNK}{Jacobian-Free Newton Krylov}
+\newacronym{KAERI}{KAERI}{Korea Atomic Energy Research Institute}
 \newacronym{LANL}{LANL}{Los Alamos National Laboratory}
 \newacronym{LBNL}{LBNL}{Lawrence Berkeley National Laboratory}
 \newacronym{LCOE}{LCOE}{levelized cost of electricity}
@@ -95,6 +100,7 @@
 \newacronym{MSBR}{MSBR}{Molten Salt Breeder Reactor}
 \newacronym{MSRE}{MSRE}{Molten Salt Reactor Experiment}
 \newacronym{MSR}{MSR}{Molten Salt Reactor}
+\newacronym{MWd}{MWd}{Megawatt Days}
 \newacronym{NAGRA}{NAGRA}{National Cooperative for the Disposal of Radioactive Waste}
 \newacronym{NCSA}{NCSA}{National Center for Supercomputing Applications}
 \newacronym{NEAMS}{NEAMS}{Nuclear Engineering Advanced Modeling and Simulation}
@@ -122,6 +128,7 @@
 \newacronym{PH}{PRONGHORN}{PRONGHORN}
 \newacronym{PI}{PI}{Principal Investigator}
 \newacronym{PNNL}{PNNL}{Pacific Northwest National Laboratory}
+\newacronym{PRIDE}{PRIDE}{Pyroprocessing Integrated Demonstration}
 \newacronym{PRKE}{PRKE}{Point Reactor Kinetics Equations}
 \newacronym{PSPG}{PSPG}{Pressure-Stabilizing/Petrov-Galerkin}
 \newacronym{PWAR}{PWAR}{Pratt and Whitney Aircraft Reactor}
@@ -135,6 +142,7 @@
 \newacronym{RIA}{RIA}{Reactivity Insertion Accident}
 \newacronym{RIF}{RIF}{Region-Institution-Facility}
 \newacronym{SAM}{SAM}{Simulation and Modeling}
+\newacronym{SCF}{SCF}{Software Carpentry Foundation}
 \newacronym{SFR}{SFR}{Sodium-Cooled Fast Reactor}
 \newacronym{SINDAG}{SINDA{\textbackslash}G}{Systems Improved Numerical Differencing Analyzer $\backslash$ Gaski}
 \newacronym{SKB}{SKB}{Svensk K\"{a}rnbr\"{a}nslehantering AB}
@@ -146,8 +154,10 @@
 \newacronym{SWF}{SWF}{Separations and Waste Forms}
 \newacronym{SWU}{SWU}{Separative Work Unit}
 \newacronym{SandO}{S\&O}{Signatures and Observables}
+\newacronym{THW}{THW}{The Hacker Within}
 \newacronym{TRIGA}{TRIGA}{Training Research Isotope General Atomic}
 \newacronym{TRISO}{TRISO}{Tristructural Isotropic}
+\newacronym{TRU}{TRU}{transuranic} 
 \newacronym{TSM}{TSM}{Total System Model}
 \newacronym{TSPA}{TSPA}{Total System Performance Assessment for the Yucca Mountain License Application}
 \newacronym{UFD}{UFD}{Used Fuel Disposition}
@@ -159,15 +169,5 @@
 \newacronym{VISION}{VISION}{the Verifiable Fuel Cycle Simulation Model}
 \newacronym{VV}{V\&V}{verification and validation}
 \newacronym{WIPP}{WIPP}{Waste Isolation Pilot Plant}
-\newacronym{YMR}{YMR}{Yucca Mountain Repository Site}
-\newacronym{THW}{THW}{The Hacker Within}
-\newacronym{SCF}{SCF}{Software Carpentry Foundation}
 \newacronym{YMG}{YMG}{Young Members Group}
-\newacronym{FCWMD}{FCWMD}{Fuel Cycle and Waste Management Division}
-\newacronym{TRU}{TRU}{transuranic} 
-\newacronym{KAERI}{KAERI}{Korea Atomic Energy Research Institute}
-\newacronym{PRIDE}{PRIDE}{Pyroprocessing Integrated Demonstration}
-%\newacronym{<++>}{<++>}{<++>}
-%\newacronym{<++>}{<++>}{<++>}
-%\newacronym{<++>}{<++>}{<++>}
-%\newacronym{<++>}{<++>}{<++>}
+\newacronym{YMR}{YMR}{Yucca Mountain Repository Site}
