--- a/2018-westphal-antpc.tex
+++ b/2018-westphal-antpc.tex
@@ -1,11 +1,11 @@
 \documentclass{anstrans}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \title{Pyre: A Cyclus Pyroprocessing Facility Archetype}
-\author{Gregory T. Westphal* and Kathryn D. Huff}
+\author{Gregory T. Westphal$^*$ and Kathryn D. Huff}
 
 \institute{
 Dept. of Nuclear, Plasma and Radiological Engineering, University of Illinois at Urbana-Champaign \\
-*gtw2@illinois.edu
+$^*$gtw2@illinois.edu
 }
 
 %%%% packages and definitions (optional)
