--- a/refining.tex
+++ b/refining.tex
@@ -1,4 +1,4 @@
-% Author: Kathryn Huff
+% Authors: Greg Westphal and Kathryn Huff
 \documentclass[border=10pt]{standalone}
 \usepackage{tikz}
 \usetikzlibrary{arrows.meta}
