--- a/flowchart.tex
+++ b/flowchart.tex
@@ -1,5 +1,5 @@
-% Diagram of the nuclear fuel cycle
-% Author: Kathryn Huff
+% Diagram of the pyroprocessing material flow
+% Authors: Greg Westphal and Kathryn Huff
 \documentclass[border=10pt]{standalone}
 \usepackage{tikz}
 \usetikzlibrary{arrows.meta}
