--- a/2018-westphal-antpc.tex
+++ b/2018-westphal-antpc.tex
@@ -209,13 +209,14 @@ multiple aspects which affect the throughput and efficiencies of different waste
 		& Li$_2$O wt\% & $^{137}$Cs & \cite{choi_electrochemical_2015} \\
 		& Current & Power Draw & \cite{lee_korean_2011} \\
 		& Porosity & Shipments & \cite{lee_modeling_2016} \\
-		& Distillation Speed & & \\ \hline
+		& Distillation Speed & Throughput & \\ 
+		& Time & & \\ \hline
 		Electrorefining & Volume & Fission Products & \cite{lee_advanced_2008} \\
-		& Throughput & Power Draw & \cite{lee_korean_2011} \\
+		& Time & Power Draw & \cite{lee_korean_2011} \\
 		& Material & Waste Salt & \cite{flowsheet_1998} \\
 		& Anode Rotation & Vacuum Pressure & \cite{koyama_development_2012} \\
 		& Stirrer Speed & Temperature & \cite{kim_development_2013} \\
-		& Pressure &  & \\
+		& Pressure & Throughput & \\
 		& Temperature & & \\ \hline
 		Electrowinning & Current & Power Draw & \cite{flowsheet_1998} \\
 		& Shroud Material & Cadmium Waste & \cite{lee_korean_2011} \\
