intro and reduction edits

--- a/2018-westphal-antpc.tex
+++ b/2018-westphal-antpc.tex
@@ -55,8 +55,8 @@ facility archetypes in the future.
 \section{Introduction}
 The diversion of significant quantities of SNM from the nuclear fuel cycle is major non-proliferation 
 concern \cite{noauthor_iaea_2017}. These diversions must be detected in a timely manner using signatures and observables in 
-order to properly safegaurd the fuel cycle. Pyroprocessing is a used nuclear fuel separations technology capable of both 
-converting current generation waste into sodium fast reactor fuel, and reprocessing next generation molten salt fuel types. 
+order to properly safegaurd the fuel cycle. Timely detection is critical in non-proliferation to discover these shadow fuel cycles
+before diverted material is further processed. Pyroprocessing is a used nuclear fuel separations technology for advanced reactors. 
 With a reprocessing technology comes signatures and observables which in turn necessitate unique diversion detection methods. 
 The goal of this research is to identify potential signs of material diversion in a pyroprocessing facility and implement models 
 of these processes into a detailed pyroprocessing facility archetype to the modular, agent-based, fuel cycle simulator, \Cyclus \cite{huff_fundamental_2016}. This facility archetype will equip users of the \Cyclus fuel cycle simulator to investigate the 
@@ -108,7 +108,7 @@ Yellowcake, created in voloxidation, enters the cathode, a negatively charged me
 500 mA/cm$^2$ 
 is applied to the anode in a molten LiCl salt. The electrolytic reduction process primarily results in the diffusion of 
 Cs, Ba and Sr, along with the reduction and conversion of zirconium into metallic form \cite{choi_electrochemical_2015,flowsheet_1998}.
-Electroreduction can further improve its throughput by the addition of Li$_2$O as a catalyst and to prevent dissolution 
+Electroreduction can further improve its throughput by the addition of Li$_2$O as a catalyst; the catalyst also prevents dissolution 
 of the anode \cite{choi_electrochemical_2015}. Since Li$_2$O is used to speed up the reaction, note 
 that for signatures and observables the operators could add more oxide than reported to IAEA. More frequent shipments 
 of lithium oxide can be tracked as an observable to match records.
