--- a/2018-westphal-antpc.tex
+++ b/2018-westphal-antpc.tex
@@ -262,7 +262,7 @@ pyroprocessing facility.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conclusions}
-This analysis demonstrates the variability in commercialized pyroprocessing facilities and their affects on potential 
+This analysis demonstrates the variability in pyroprocessing facilities and their affects on potential 
 signatures and observables that will be tracked through a detailed archetype. \Cyclus also is outlined as a tool in 
 detecting shadow fuel cycles through its agent-based simulation and modular facilities, allowing for variations in 
 plant design. Modeling and simulation of shadow fuel cycles will be performed in the \Cyclus environment after 
