--- a/2018-westphal-antpc.tex
+++ b/2018-westphal-antpc.tex
@@ -109,8 +109,8 @@ Yellowcake, created in voloxidation, enters the cathode, a negatively charged me
 is applied to the anode in a molten LiCl salt. The electrolytic reduction process primarily results in the diffusion of 
 Cs, Ba and Sr, along with the reduction and conversion of zirconium into metallic form \cite{choi_electrochemical_2015,flowsheet_1998}.
 Electroreduction can further improve its throughput by the addition of Li$_2$O as a catalyst; the catalyst also prevents dissolution 
-of the anode \cite{choi_electrochemical_2015}. Since Li$_2$O is used to speed up the reaction, note 
-that for signatures and observables the operators could add more oxide than reported to IAEA. More frequent shipments 
+of the anode \cite{choi_electrochemical_2015}. Since Li$_2$O is used to speed up the reaction,
+the operators could add more oxide than reported to IAEA. More frequent shipments 
 of lithium oxide can be tracked as an observable to match records.
 
 \begin{figure}[ht]
