--- a/2018-westphal-antpc.tex
+++ b/2018-westphal-antpc.tex
@@ -270,7 +270,9 @@ reliable diversion detection.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Acknowledgments}
-This research was performed using funding received from the Consortium for Nonproliferation Enabling Capabilities under award number 1-483313-973000-191100.
+This material is based upon work supported by the Department of Energy
+National Nuclear Security Administration under Award Number(s) DE-NA0002576 via
+the Consortium for Nonproliferation Enabling Capabilities.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \bibliographystyle{ans}
