--- a/reduction.tex
+++ b/reduction.tex
@@ -23,7 +23,7 @@
   
  
   \node (reduction)			[process] {Electroreduction};
-  \node (decay)				[redbox, right of=reduction, xshift=2cm] {$^{90}$Sr and Cs waste};
+  \node (decay)				[redbox, right of=reduction, xshift=2cm] {$^{90}$Sr and $^{137}$Cs waste};
   \node (Li2O)	 			[greenbox, left of=reduction, xshift=-2cm, yshift=1.5cm] {Li$_2$O wt\%};
   \node (current)	 		[greenbox, left of=reduction, xshift=-2cm] {Current};
   \node (porosity)			[greenbox, left of=reduction, xshift=-2cm, yshift=-1.5cm] {Anode shroud \\ porosity};
