--- a/winning.tex
+++ b/winning.tex
@@ -25,9 +25,11 @@
   \node (time)				[greenbox, left of=winning, xshift=-2cm, yshift=1.5cm] {Time};
   \node (current) 			[greenbox, left of=winning, xshift=-2cm] {Current};
   \node (shroud)			[greenbox, left of=winning, xshift=-2cm, yshift=-1.5cm] {Shroud};
-  \node (cesium)			[redbox, right of=winning, xshift=2cm, yshift=1.5cm] {$^{135}$Cs, $^{137}$Cs}; 
+  \node (cesium)			[redbox, right of=winning, xshift=2cm, yshift=1.5cm] {Lanthanides}; 
   \node (fission)			[redbox, right of=winning, xshift=2cm] {Fission Products};
   \node (power)				[redbox, right of=winning, xshift=2cm, yshift=-1.5cm] {Power Draw};
+  \node (fuel)				[process, below of=winning, xshift=-2cm] {Fuel \\ Fabrication};
+  \node (refining)			[process, below of=winning, xshift=2.25cm] {Electrorefining};
   
   \draw[->]					(winning)++(0,2) -- (winning) node[midway] {LiCl-KCl + U/TRU};
   \draw[->]					(winning) -- (fission);
@@ -36,7 +38,8 @@
   \draw[->]					(time) -- (winning);
   \draw[->]					(current) -- (winning);
   \draw[->]					(shroud) -- (winning);
-  \draw[->]					(winning) -- ++(0,-2) node[midway] {U/TRU + Cd};
+  \draw[->]					(winning)++(-0.25,-0.5) -- ++(0,-1) -- ++(-1.75,0) node[midway] {U/TRU} -- (fuel);
+  \draw[->]					(winning)++(0.25,-0.5) -- ++(0,-1) -- ++(2,0) node[midway] {FP/Salt/U} -- (refining) ;
 
   \end{tikzpicture}
 \end{document}
