--- a/flowchart.tex
+++ b/flowchart.tex
@@ -26,7 +26,7 @@
   \node (volox)				[process, below of=chop] {Voloxidation};
   \node (reduction)			[process, below of=volox] {Electroreduction};
   \node (actinide)			[redbox, right of=volox, xshift=2cm] {Actinide Waste};
-  \node (decay)				[redbox, right of=reduction, xshift=2cm] {$^{90}$Sr and Cs waste};
+  \node (decay)				[redbox, right of=reduction, xshift=2cm] {$^{90}$Sr and $^{137}$Cs waste};
   \node (refining)			[process, below of=reduction, yshift=-2cm] {Electrorefining};
   \node (winning)			[process, below of=refining, xshift=3cm] {Electrowinning};
   \node (Li2O)	 			[greenbox, left of=reduction, xshift=-3cm, yshift=1.5cm] {Li$_2$O wt\%};
@@ -40,7 +40,7 @@
   \node (LiCl-KCl)			[bluebox, below of=reduction, xshift=-2cm, yshift=0.5cm] {LiCl-KCl \\ Distillation};
   \node (salt distl)		[bluebox, below of=refining, xshift=-1cm] {Salt \\ Distillation};
   \node (cd distl)			[bluebox, below of=winning] {Cd Distillation};
-  \node (cesium)			[redbox, below of=fission, yshift=1.5cm] {$^{135}$Cs and $^{137}$Cs \\ Waste};
+  \node (lanth)				[redbox, below of=fission, yshift=1.5cm] {Lanthanide \\ Waste};
   \node (fuel fab) 			[process, below of=salt distl, xshift=-2cm] {Fuel Fabrication};
   
   \draw[->]					(chop) -- (volox) node[midway] {Oxide \\ Pellets};
@@ -58,12 +58,12 @@
   \draw[->]					(refining)++(0.75,-0.5) -- ++(0,-1) -- ++(0.75,0) -| (winning);
   \draw[->]					(refining)++(-1.5,-0.5) -- ++(0,-2)(salt distl) node[midway] {U + salt};
   \draw[->]					(salt distl)++(0.75,0.5) -- ++(0,2) (refining) node[midway] {salt};
-  \draw[->]					(salt distl) -- ++(0,-1.25) -- ++(-2,0) -- (fuel fab) node[midway] {U};
+  \draw[->]					(salt distl) -- ++(0,-1.25) -- ++(-2,0)  node[midway] {U} -- (fuel fab);
   \draw[->]					(reduction)++(1,-0.5) -- ++(0,-0.75) -- ++(1,0) -- ++(0,-0.75) (LiCl);
   \draw[->]					(LiCl) -- ++(0,-1.25) -- ++(-1,0) -- ++(0,-0.75) (refining);
   \draw[->]					(refining)++(-1,0.5) -- ++(0,0.75) -- ++(-1,0) -- ++(0,0.75) (LiCl-KCl);
   \draw[->]					(LiCl-KCl)++(0,0.5) -- ++(0,0.75) -- ++(1,0) -- ++(0,0.75) (reduction);
-  \draw[->]					(winning.east) -| (cesium);
+  \draw[->]					(winning.east) -| (lanth);
   \draw[->]					(winning) -- (cd distl);
   \draw[->]					(cd distl) -- (fuel fab) node[midway] {U/TRU};
   \end{tikzpicture}
