--- a/refining.tex
+++ b/refining.tex
@@ -33,8 +33,9 @@
   \node (power)				[redbox, right of=refining, xshift=2cm, yshift=-2.5cm] {Power Draw};
   \node (waste)				[redbox, right of=refining, xshift=2cm, yshift=0.5cm] {Waste Salt};
   \node (temp+press)		[redbox, right of=refining, xshift=2cm, yshift=2cm] {Temperature \& \\ Pressure Reading};
-  
   \node (salt distl)		[bluebox, below of=refining, xshift=-1cm] {Salt \\ Distillation};
+  \node (fuelfab)			[process, below of=salt distl] {Fuel \\ Fabrication};
+  \node (refine2)			[process, below of=refining, xshift=2cm, yshift=-3cm] {Electrorefining};
   
   
   \draw[->]					(material.east) -- ++(0.25,0) --++(0,-1.25) -- (refining);;
@@ -52,6 +53,8 @@
   \draw[->]					(salt distl)++(0.75,0.5) -- ++(0,2) (refining) node[midway] {salt};
   \draw[->]					(refining)++(0.75,2.5) -- ++(0,-2) node[midway] {U};
   \draw[->]					(refining)++(-0.75,0.5) -- ++(0,2)  node[midway] {LiCl-KCl};
+  \draw[->]					(winning) -- (refine2) node[midway] {FP/Salt/U};
+  \draw[->]					(salt distl) -- (fuelfab) node[midway] {U + U/TRU};
 
   \end{tikzpicture}
 \end{document}
