--- a/2018-westphal-antpc.tex
+++ b/2018-westphal-antpc.tex
@@ -168,8 +168,8 @@ time for electroreduction and electrowinning are reduced \cite{choi_electrochemi
 	\label{fig:winning}
 \end{figure}
 
-Figure \ref{fig:winning} shows that electrowinning produces Cs waste similar to electroreduction except in reduced quantities.
-Any fission products remaining in the salt from electrorefining are also removed here. In addition to physically tracked 
+Figure \ref{fig:winning} shows that electrowinning product recirculates to electrorefining after removing lanthanides.
+Fission products remaining in the salt from electrorefining are also removed here. In addition to physically tracked 
 quantities, facility power can also be monitored to observe the use of current to increase throughput. 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Method: \Cyclus Simulation}
