--- a/flowchart.tex
+++ b/flowchart.tex
@@ -28,7 +28,7 @@
   \node (actinide)			[redbox, right of=volox, xshift=2cm] {Actinide Waste};
   \node (decay)				[redbox, right of=reduction, xshift=2cm] {$^{90}$Sr and $^{137}$Cs waste};
   \node (refining)			[process, below of=reduction, yshift=-2cm] {Electrorefining};
-  \node (winning)			[process, below of=refining, xshift=3cm] {Electrowinning};
+  %\node (winning)			[process, below of=refining, xshift=3cm] {Electrowinning};
   \node (Li2O)	 			[greenbox, left of=reduction, xshift=-3cm, yshift=1.5cm] {Li$_2$O wt\%};
   \node (temp)	 			[greenbox, left of=refining, xshift=-3cm] {Temperature};
   \node (fission) 			[redbox, right of=refining, xshift=2cm] {Fission Products};
@@ -38,10 +38,10 @@
   \node (porosity)			[greenbox, left of=reduction, xshift=-3cm, yshift=-1.5cm] {Anode shroud \\ porosity};
   \node (LiCl)				[bluebox, below of=reduction, xshift=2cm, yshift=0.5cm] {LiCl \\ Distillation};
   \node (LiCl-KCl)			[bluebox, below of=reduction, xshift=-2cm, yshift=0.5cm] {LiCl-KCl \\ Distillation};
-  \node (salt distl)		[bluebox, below of=refining, xshift=-1cm] {Salt \\ Distillation};
-  \node (cd distl)			[bluebox, below of=winning] {Cd Distillation};
-  \node (lanth)				[redbox, below of=fission, yshift=1.5cm] {Lanthanide \\ Waste};
-  \node (fuel fab) 			[process, below of=salt distl, xshift=-2cm] {Fuel Fabrication};
+  \node (winning)			[process, below of=refining] {Electrowinning};
+  %\node (cd distl)			[bluebox, below of=winning] {Cd Distillation};
+  \node (lanth)				[redbox, right of=winning, xshift=2cm] {Lanthanide \\ Waste};
+  \node (fuel fab) 			[process, below of=winning] {Fuel Fabrication};
   
   \draw[->]					(chop) -- (volox) node[midway] {Oxide \\ Pellets};
   \draw[->]					(volox) -- (reduction) node[midway] {U$_3$O$_8$};
@@ -55,17 +55,18 @@
   \draw[->]					(temp) -- (refining);
   \draw[->]					(rotation) -- (refining);
   \draw[->]					(refining) -- (fission);
-  \draw[->]					(refining)++(0.75,-0.5) -- ++(0,-1) -- ++(0.75,0) -| (winning);
-  \draw[->]					(refining)++(-1.5,-0.5) -- ++(0,-2)(salt distl) node[midway] {U + salt};
-  \draw[->]					(salt distl)++(0.75,0.5) -- ++(0,2) (refining) node[midway] {salt};
-  \draw[->]					(salt distl) -- ++(0,-1.25) -- ++(-2,0)  node[midway] {U} -- (fuel fab);
+  %\draw[->]					(refining)++(0.75,-0.5) -- ++(0,-1) -- ++(0.75,0) -| (winning);
+  \draw[->]					(refining)++(-0.75,-0.5) -- ++(0,-2)(winning) node[near start] {U/TRU + salt};
+  \draw[->]					(winning)++(0.75,0.5) -- ++(0,2) (refining) node[near start] {salt/FP/U/TRU};
+  %\draw[->]					(winning) -- ++(0,-1.25) -- ++(-2,0)  node[midway] {U} -- (fuel fab);
+  \draw[->]					(winning) -- (fuel fab) node[midway] {U/TRU};
   \draw[->]					(reduction)++(1,-0.5) -- ++(0,-0.75) -- ++(1,0) -- ++(0,-0.75) (LiCl);
   \draw[->]					(LiCl) -- ++(0,-1.25) -- ++(-1,0) -- ++(0,-0.75) (refining);
   \draw[->]					(refining)++(-1,0.5) -- ++(0,0.75) -- ++(-1,0) -- ++(0,0.75) (LiCl-KCl);
   \draw[->]					(LiCl-KCl)++(0,0.5) -- ++(0,0.75) -- ++(1,0) -- ++(0,0.75) (reduction);
-  \draw[->]					(winning.east) -| (lanth);
-  \draw[->]					(winning) -- (cd distl);
-  \draw[->]					(cd distl) -- (fuel fab) node[midway] {U/TRU};
+  \draw[->]					(winning.east) -- (lanth);
+  %\draw[->]					(winning) -- (cd distl);
+  %\draw[->]					(cd distl) -- (fuel fab) node[midway] {U/TRU};
   \end{tikzpicture}
 \end{document}
 
