--- a/2018-westphal-antpc.tex
+++ b/2018-westphal-antpc.tex
@@ -97,7 +97,7 @@ Other methods to improve the U$_3$O$_8$ reaction rate are to use alternative oxi
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics[width=1\linewidth]{volox}
+	\includegraphics[width=0.8\linewidth]{volox}
 	\caption{A material balance over the voloxidation sub-process, including observables.}
 	\label{fig:volox}
 \end{figure}
@@ -142,13 +142,15 @@ the bottom of the vessel, improving separation efficiency and increasing through
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics[width=0.9\linewidth]{refining}
+	\includegraphics[width=0.8\linewidth]{refining}
 	\caption{A material balance over the electrorefining sub-process, including observables.}
 	\label{fig:refining}
 \end{figure}
 
 The electrorefining process also produces the fission product waste stream which requires monitoring. The following products are produced 
 and tracked in this step: Tc, Ag, Pd, Rh, Ru, Mo and Zr \cite{flowsheet_1998}. Uranium and TRU product streams separated at this stage are sent to Fuel Fabrication, while the remaining salt is reformed as an oxidant and recirculated.
+Separation efficiencies are taken after recirculation, and treated as a once-through cycle. The Cyclus time step
+is not detailed enough to benefit from analyzing inter-batch processes. Therefore, only end-state efficiencies are used rather than an explicit model.
 
 \subsection{Electrowinning}
 
