--- a/2018-westphal-antpc.tex
+++ b/2018-westphal-antpc.tex
@@ -150,7 +150,7 @@ the bottom of the vessel, improving separation efficiency and increasing through
 The electrorefining process also produces the fission product waste stream which requires monitoring. The following products are produced 
 and tracked in this step: Tc, Ag, Pd, Rh, Ru, Mo and Zr \cite{flowsheet_1998}. Uranium and TRU product streams separated at this stage are sent to Fuel Fabrication, while the remaining salt is reformed as an oxidant and recirculated.
 Separation efficiencies are taken after recirculation, and treated as a once-through cycle. The Cyclus time step
-is not detailed enough to benefit from analyzing inter-batch processes. Therefore, only end-state efficiencies are used rather than an explicit model.
+is not detailed enough to benefit from analyzing intra-batch processes. Therefore, only end-state efficiencies are used rather than an explicit model.
 
 \subsection{Electrowinning}
 
