--- a/2018-westphal-antpc.tex
+++ b/2018-westphal-antpc.tex
@@ -189,7 +189,9 @@ match results seen in \cite{flowsheet_1998}.
 
 A pyroprocessing facility can be modeled with the separations archetype at low fidelity 
 by a dedicated archetype. The goal for Pyre is to include facility configuration parameters and 
-their respective effects on the efficiency table. Efficiencies also vary according to the feed stream resulting in different 
+their respective effects on the efficiency table. Any material not separated by the four processes is categorized as
+leftover commodity, ensuring material conservation is maintained. A test will also be used to verify isotopic 
+efficiencies add up to 1. Efficiencies also vary according to the feed stream resulting in different 
 waste streams for LWR and FR fuels, for example. Multiple material choices exist for anodes and cathodes as well as other 
 design choices that require consideration. 
 
