passive -> active, clarity

--- a/2018-westphal-antpc.tex
+++ b/2018-westphal-antpc.tex
@@ -127,12 +127,12 @@ electrochemically \cite{lee_korean_2011}.
 
 Lee et al. \cite{lee_advanced_2008} show that the addition of vacuum pressure to the system improves removal efficiency. 
 Temperature, however, exhibits the opposite effect: as temperature decreases so does salt removal. This comes into effect 
-particularly depending on material choice of instrumentation and containment \cite{lee_advanced_2008}. The most limiting 
-material choice is iron because a eutectic forms between Fe and U at 725$^{\circ}$C \cite{chapman_revision_1984}. 
-In facilities where iron equipment is present temperatures are limited to 700$^{\circ}$C, and efficiency is 
-significantly hindered. Cathode arrangement and anode rotation speed also affect the collection of uranium 
-dendrites \cite{lee_advanced_2008}. The addition of a central stirrer allows mixing of uranium dendrites stuck on 
-the bottom of the vessel, improving separation efficiency and increasing throughput. 
+particularly depending on material choice of instrumentation and containment \cite{lee_advanced_2008}. 
+Iron, for example, limits operating temperature because a eutectic forms at 725$^{\circ}$C \cite{chapman_revision_1984}.
+In facilities where iron equipment is present, temperatures are limited to 700$^{\circ}$C, and efficiency is significantly hindered. 
+Cathode arrangement and anode rotation speed also affect the collection of uranium 
+dendrites \cite{lee_advanced_2008}. A central stirrer mixes uranium dendrites stuck on 
+the vessel, improving separation efficiency and increasing throughput. 
 
 \begin{figure}[ht]
 	\centering
@@ -150,12 +150,12 @@ is not detailed enough to benefit from analyzing intra-batch processes. Therefor
 
 Molten salt containing TRUs from electrorefining is separated through electrowinning. This subprocess results in separation of trace uranium quantities, lanthanides and fission products. 
 With a temperature of 500$^{\circ}$C there is approximately 99 wt\% reduction in actinides and lanthanides \cite{flowsheet_1998}. 
-Throughput is also dependent on material choice for the inert electrodes whose operating voltages vary, impacting separation 
+Throughput also depends on material choice for the inert electrodes, impacting separation 
 efficiency \cite{koyama_development_2012}. A shroud surrounds the anode to provide a path for O$^{2-}$ ions to the anode and 
 prevent Cl$_2$ from corroding the anode \cite{kim_development_2013,choi_electrochemical_2015}. Optimum operating current 
-depends on the material choice for the anode shroud since a nonporous shroud limits ion pathways to the points of contact 
-with the anode. Higher porosity corresponds to free ion paths and a higher current. With a higher current, the separation 
-time for electroreduction and electrowinning are reduced \cite{choi_electrochemical_2015}.
+depends on material choice for the anode shroud since a nonporous shroud limits ion pathways to the anode contact points.
+Higher porosity corresponds to free ion paths and a higher current. Higher current reduces the separation 
+time for electroreduction and electrowinning \cite{choi_electrochemical_2015}.
 
 \begin{figure}[ht]
 	\centering
