--- a/pres/arfc-pres.tex
+++ b/pres/arfc-pres.tex
@@ -85,18 +85,16 @@
 \end{frame}
 }
 
+\section{Introduction}
+\input{intro}
 \section{Motivation}
-\subsection{Cat Behavior}
-\input{cat_behavior}
-\subsection{Cat Appearance}
-\input{cat_appearance}
-\subsection{Cat Math}
-\input{cat_math}
+\input{motivation}
 \section{Methods}
-\subsection{Illinois Colors}
-\input{fierce}
-\section{Conclusion}
-\input{conclusion}
+\input{methods}
+\section{Results}
+\input{results}
+\section{Future Work}
+\input{future}
 \input{acks}
 %%--------------------------------%%
 %%--------------------------------%%
