--- a/pres/results.tex
+++ b/pres/results.tex
@@ -1,5 +1,5 @@
 \begin{frame}
-  \frametitle{Blue and Orange are Fierce}
+  \frametitle{Average Sim}
   % a comment
         Those are the Illini Colors. Use them like you see them in Figure 
         \ref{fig:fierce}.
@@ -11,3 +11,12 @@
     \label{fig:fierce}
   \end{figure}
 \end{frame}
+
+\begin{frame}
+  \frametitle{Edge Case Simulations}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Current Diversion}
+\end{frame}
+
